--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "rusty-yaml"
 version = "0.1.0"
 authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
 edition = "2018"
+description = "A rust library to parse yaml files"
+license = "MIT"
 
 [dependencies]
 yaml-rust="0.4.3"
