--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.4.3"
 authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
 edition = "2018"
 description = "A rust library to parse yaml files"
-license = "MIT"
+license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
